--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: docker build --tag=prebuilt-packages
     - run: mkdir -p packages && cd packages && docker export prebuilt-images | tar x
-    - uses: actions/upload-artifacts@v1
+    - uses: actions/upload-artifact@v1
       with:
         path: packages/**
         name: packages
