--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: Ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: docker build --tag=prebuilt-packages
+    - run: docker build --tag=prebuilt-packages .
     - run: mkdir -p packages && cd packages && docker export prebuilt-images | tar x
     - uses: actions/upload-artifact@v1
       with:
