--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,10 +1,9 @@
 FROM archlinux:base-devel as builder
 
-SHELL /bin/bash
 RUN useradd -m builder && echo "builder ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
     mkdir /packages && chown builder /packages && \
     echo "MAKEFLAGS=-j$(nproc)" >> /etc/makepkg.conf && \
-    echo "[multilib]\nInclude = /etc/pacman.d/mirrorlist" >> /etc/pacman.conf && \
+    echo -e "[multilib]\nInclude = /etc/pacman.d/mirrorlist" >> /etc/pacman.conf && \
     pacman -Syuy lib32-gcc-libs
 USER builder
 
