--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: cp .github/workflows/Dockerfile ./ && docker build --tag=prebuilt-packages .
-    - run: mkdir -p packages && cd packages && docker export prebuilt-images | tar x
+    - run: mkdir -p packages && cd packages && docker export prebuilt-packages | tar x
     - uses: actions/upload-artifact@v1
       with:
         path: packages/**
