--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,5 @@ jobs:
     - run: mkdir -p packages && cd packages && docker image save prebuilt-packages | tar x
     - uses: actions/upload-artifact@v1
       with:
-        path: packages/**
+        path: packages
         name: packages
